--- a/trunk/templates/index.html
+++ b/trunk/templates/index.html
@@ -2,7 +2,8 @@
 {% block main %}
 	<a href="{{ url_for('inbox', path='') }}"> <button type="button"> Входящие </button> </a>
 	<a href="{{ url_for('file') }}"> <button type="button"> Архив </button> </a>
-	<a href="{{ url_for('tag') }}"> <button type="button"> Теги </button> </a>
+	<a href="{{ url_for('tag', tag_id=0) }}"> <button type="button"> Ярлыки </button> </a>
+	<a href="{{ url_for('tagmap') }}"> <button type="button"> Карта ярлыков </button> </a>
 	<a href=""> <button type="button"> Backup </button> </a>
 	<a href=""> <button type="button"> Restore </button> </a>
 {% endblock %}
