--- a/templates/tag_index.html
+++ b/templates/tag_index.html
@@ -20,10 +20,10 @@
   <p> <a href="{{ url_for('tag', tag_id=i.eid) }}"> {{ i.name }} </a> </p>
 {% endfor %} {% endif %} </p>
 </tr>
-<tr>
+<tr valign="top">
  <td/>
  <td> <a href="{{ url_for('tag_add_tag', tag_id=tag.eid) }}"> <button type="button"> Добавить </button> </a> </td>
- <td> <a href="{{ url_for('tag_add_facet', tag_id=tag.eid) }}"><button type="button"> Добавить </button> </a> </td>
+ <td> <a href="{{ url_for('tag_add_facet', tag_id=tag.eid) }}"><button type="button"> Добавить </button> </a> <br/> или выбрать </td>
 </tr>
 </table>
 {% if tag.eid %}
