--- a/branches/dasarchive-dj/templates/base.html
+++ b/branches/dasarchive-dj/templates/base.html
@@ -8,16 +8,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title> DasArchive - {% block title %} {% endblock %} </title>
 	<link type="text/css" href="{{ STATIC_URL }}css/base.css" rel="stylesheet">
-	<link type="text/css" href="{{ STATIC_URL }}css/colors.css" rel="stylesheet"/>
-	<link type="text/css" href="{{ STATIC_URL }}css/fieldset.css" rel="stylesheet"/>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
 	<!-- admin -->
-	<link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css" />
-	<!--link rel="stylesheet" type="text/css" href="/static/admin/css/base.css" /-->
-	<link rel="stylesheet" type="text/css" href="/static/admin/css/widgets.css" />
+	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}admin/css/forms.css" />
+	<!--link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}admin/css/base.css" /-->
+	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}admin/css/widgets.css" />
 	<script type="text/javascript">window.__admin_media_prefix__ = "/static/admin/";</script>
-	<!--script type="text/javascript" src="/admin/jsi18n/"></script-->
-	<script type="text/javascript" src="/static/admin/js/core.js"></script>
+	<!--script type="text/javascript" src="{{ STATIC_URL }}admin/jsi18n/"></script-->
+	<script type="text/javascript" src="{{ STATIC_URL }}admin/js/core.js"></script>
 	<!-- /admin -->
 	{% block js %}
 	{% endblock %}
@@ -30,86 +28,9 @@
 			$(document.forms['myForm']).populate(json[data]);
 		}
 	</script>
+	{% block csslink %}
+	{% endblock %}
 	<style type="text/css" >
-		dt p	{ font-weight: bold; }
-		table {
-			border-collapse: collapse;
-			border: none;
-		}
-		td {
-			border: 1px solid black;
-			padding: 2pt;
-		}
-		#topmenu {
-			background-color: #EBEFF9;
-			display: table;
-			width: 100%;
-			text-align: center;
-			border-top: 5px solid #EBEFF9;
-		}
-		#topmenu > div {
-			display: table-cell;
-			border-bottom: 1px solid #6B90DA;
-			padding: 3px 1em;
-			white-space: nowrap;
-		}
-		#topmenu div.active {
-			border: 1px solid #6B90DA;
-			border-bottom-color: white;
-			background: white;
-			-webkit-border-top-left-radius: 5px;
-			-webkit-border-top-right-radius: 5px;
-			-moz-border-radius-topleft: 5px;
-			-moz-border-radius-topright: 5px;
-			border-top-left-radius: 5px;
-			border-top-right-radius: 5px;
-			/* gradient */
-			background: -moz-linear-gradient(top, #EBEFF9, white);		/* Firefox 3.6+ Chrome 1-9, Safari 4-5 */
-			background: -webkit-linear-gradient(top, #EBEFF9, white);	/* Chrome 10+ 4-5 */
-			background: -o-linear-gradient(top, #EBEFF9, white);		/* Opera 11.10+ */
-			background: -ms-linear-gradient(top, #EBEFF9, white);		/* IE 10 */
-			background: linear-gradient(top, #EBEFF9, white);		/* CSS3 */
-		}
-		#topmenu a:link {
-			color: blue;
-		}
-		#topmenu a:visited {
-			color: blue;
-		}
-		button.rounded {
-			-webkit-border-radius: 5px;
-			-moz-border-radius: 5px;
-			border-radius: 5px;
-		}
-		.even	{ background-color: white; }
-		.odd	{ background-color: #F0F0F0; }
-		.wide	{ width: 100%; }
-		.table	{ display: table; }
-		.row	{ display: table-row; }
-		.cell	{ display: table-cell; }
-		.center	{ text-align: center; }
-		.right	{ text-align: right; }
-		.bt	{ border-top: 1px solid black; }
-		.bb	{ border-bottom: 1px solid black; }
-		.bl	{ border-left: 1px solid black; }
-		.br	{ border-right: 1px solid black; }
-		.box	{ border: 1px solid black; }
-		.nobt	{ border-top: 0; }
-		.nobb	{ border-bottom: 0; }
-		.nobl	{ border-left: 0; }
-		.nobr	{ border-right: 0; }
-		.nobox	{ border: 0; }
-		.bold	{ font-weight: bold; }
-		div#legend {
-			margin: auto;
-			border: 1px solid lightgrey;
-			margin: 3pt;
-			padding: 3pt;
-			-webkit-border-radius: 5px;
-			-moz-border-radius: 5px;
-			border-radius: 5px;
-			background-color: whitesmoke;
-		}
 	{% block css %}
 	{% endblock %}
 	</style>
