node view: cookie-powered mode

--- a/branches/dasarchive-dj/templates/index.html
+++ b/branches/dasarchive-dj/templates/index.html
@@ -14,9 +14,7 @@ $("#tm_index").addClass("active");
     <a href="{% url da.views.file_create %}"> Add </a>
    </td>
    <td>
-    <a href="{% url da.views.node_path 1 %}"> Path </a>
-    <a href="{% url da.views.node_tree 1 %}"> Tree </a>
-    <a href="{% url da.views.node_graph 1 %}"> Graph </a>
+    <a href="{% url da.views.node_read 1 %}"> View </a>
    </td>
   </tr>
  </tbody>
