--- a/branches/dasarchive-dj/templates/node_base.html
+++ b/branches/dasarchive-dj/templates/node_base.html
@@ -1,30 +1,23 @@
 {% extends "base.html" %}
 {% block title %} Node {% endblock %}
 {% block body_main %}
-<table>
- <tr>
-  {% block node_buttons %}
-  <td> <a href="{% url da.views.node_path object.pk %}"> <button type="button"> Path </button> </a> </td>
-  <td> <a href="{% url da.views.node_tree object.pk %}"> <button type="button"> Tree </button> </a> </td>
-  <td> <a href="{% url da.views.node_graph object.pk %}"> <button type="button"> Graph </button> </a> </td>
-  {% endblock %}
- </tr>
-</table>
-
+<p>
+  <a href="{% url da.views.node_read_path  object.pk %}"> <button type="button" {% if mode = '0' %} disabled="disabled" {% endif %}> Path </button> </a>
+  <a href="{% url da.views.node_read_tree  object.pk %}"> <button type="button" {% if mode = '1' %} disabled="disabled" {% endif %}> Tree </button> </a>
+  <a href="{% url da.views.node_read_graph object.pk %}"> <button type="button" {% if mode = '2' %} disabled="disabled" {% endif %}> Graph </button> </a>
+</p>
+<hr/>
 <p>
  {% for i in object.get_fullpath %}
-  <a href="{% url da.views.node_path i.pk %}"> {{ i.name }} </a>
+  <a href="{% url da.views.node_read i.pk %}"> {{ i.name }} </a>
   {% if not forloop.first %} / {% endif %}
  {% endfor %}
  {{ object.name }}:
  <button type="button"> Rename </button>
  <button type="button"> Delete </button>
 </p>
-<ul>
-{% for child in object.children.all %}
- <li> <a href="{% url da.views.node_path child.pk %}"> {{ child.name }} </a> </li>
-{% endfor %}
-</ul>
+{% block node_draw %}
+{% endblock %}
 <form method='post', action='{% url da.views.node_add %}?next={{ next }}'>
  {% csrf_token %}
  <table>
