--- a/branches/dasarchive-dj/templates/node_path.html
+++ b/branches/dasarchive-dj/templates/node_path.html
@@ -1,6 +1,8 @@
 {% extends "node_base.html" %}
-{% block node_buttons %}
-  <td> <a href="{% url da.views.node_path object.pk %}"> <button type="button" disabled="disabled"> Path </button> </a> </td>
-  <td> <a href="{% url da.views.node_tree object.pk %}"> <button type="button"> Tree </button> </a> </td>
-  <td> <a href="{% url da.views.node_graph object.pk %}"> <button type="button"> Graph </button> </a> </td>
+{% block node_draw %}
+<ul>
+{% for child in object.children.all %}
+ <li> <a href="{% url da.views.node_read child.pk %}"> {{ child.name }} </a> </li>
+{% endfor %}
+</ul>
 {% endblock %}
