--- a/branches/dasarchive-dj/templates/index.html
+++ b/branches/dasarchive-dj/templates/index.html
@@ -9,13 +9,9 @@ $("#tm_index").addClass("active");
  </thead>
  <tbody>
   <tr>
-   <td/>
-   <td>
-    <a href="{% url da.views.file_create %}"> Add </a>
-   </td>
-   <td>
-    <a href="{% url da.views.node_read 1 %}"> View </a>
-   </td>
+   <td> <a href="{% url da.views.filter %}"> View </a> </td>
+   <td> <a href="{% url da.views.file_create %}"> Add </a> </td>
+   <td> <a href="{% url da.views.node_read 1 %}"> View </a> </td>
   </tr>
  </tbody>
 <table>
