--- a/branches/dasarchive-dj/templates/file/tags.html
+++ b/branches/dasarchive-dj/templates/file/tags.html
@@ -1,4 +1,5 @@
 {% extends "file/base.html" %}
 {% block body_main %}
-<p> File: <a href="{% url da.views.file_read object.pk %}"> {{ object.name }} </a> </p>
+<p> File: <a href="{% url da.views.file_read object.pk %}"> {{ object.name }} </a>: </p>
+{# tag tree here #}
 {% endblock %}
